[tool.poetry]
name = "lighthouse-api"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "lighthouse_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest = "^7.2.1"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
